--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-easy-grid": "^0.2.2",
     "react-native-web": "~0.11.7",
     "reactide-config": "^1.0.2"
   },
