--- a/package.json
+++ b/package.json
@@ -24,24 +24,24 @@
     "reactide-config": "^1.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.40",
-    "babel-preset-expo": "~8.1.0",
-    "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.7.0",
-    "html-webpack-plugin": "^3.2.0",
     "@babel/cli": "^7.0.0-beta.40",
+    "@babel/core": "^7.0.0-beta.40",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0-beta.0",
     "babel-loader": "^8.0.0-beta.0",
+    "babel-preset-expo": "~8.1.0",
     "css-loader": "^2.1.1",
     "file-loader": "^4.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "url-loader": "^2.0.0"
+    "url-loader": "^2.0.0",
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.7.0"
   },
   "private": true
 }
