--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/app": "^6.7.1",
     "@react-navigation/native": "^5.4.0",
     "@react-navigation/stack": "^5.3.7",
+    "core-util-is": "^1.0.2",
     "expo": "~37.0.3",
     "expo-font": "~8.1.0",
     "firebase": "^7.14.3",
@@ -23,12 +24,15 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-cli": "^2.0.1",
     "react-native-easy-grid": "^0.2.2",
+    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^1.0.2",
     "react-native-screens": "^2.7.0",
     "react-native-web": "~0.11.7",
+    "react-navigation": "^4.3.9",
     "reactide-config": "^1.0.2"
   },
   "devDependencies": {
